--- a/pre-recorded/test/test.html
+++ b/pre-recorded/test/test.html
@@ -3,38 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <ol>
-      <li>hasan</li>
-      <li>masud</li>
-      <li>abdullah</li>
-    </ol>
+    <table>
+      <tr>
+        <td>name</td>
+        <td>age</td>
+        <td>city</td>
+      </tr>
 
-    <ul>
-      <li>hasan</li>
-      <li>masud</li>
-      <li>abdullah</li>
-    </ul>
-
-    <select name="" id="">
-      <option>Choose City</option>
-      <option>Khulna</option>
-      <option>Dhaka</option>
-      <option>Mongla</option>
-      <option>Rangpur</option>
-    </select>
-    <br />
-
-    <label for="country">Choose your country</label><br />
-    <input type="text" list="country" />
-    <datalist id="country">
-      <option value="Banladesh"></option>
-      <option value="Napel"></option>
-      <option value="Barma"></option>
-      <option value="Amarica"></option>
-      <option value="Africa"></option>
-    </datalist>
+      <tr>
+        <td>hasan</td>
+        <td>24</td>
+        <td>khulna</td>
+      </tr>
+    </table>
   </body>
 </html>
