--- a/pre-recorded/test/test.html
+++ b/pre-recorded/test/test.html
@@ -15,7 +15,7 @@
       </tr>
 
       <tr>
-        <td>hasan</td>
+        <td>Hasan</td>
         <td>24</td>
         <td>khulna</td>
       </tr>
