--- a/pre-recorded/test/test.html
+++ b/pre-recorded/test/test.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <table>
+    <table class="btn">
       <tr>
         <td>name</td>
         <td>age</td>
